@@ -61,5 +61,13 @@ enum LIBEVTX_EVENT_LEVELS
 	LIBEVTX_EVENT_LEVEL_VERBOSE				= 5,
 };
 
+/* The event file flags
+ */
+enum LIBEVTX_FILE_FLAGS
+{
+	LIBEVTX_FILE_FLAG_IS_DIRTY				= 0x00000001UL,
+	LIBEVTX_FILE_FLAG_IS_FULL				= 0x00000002UL,
+};
+
 #endif
 
