@@ -74,16 +74,25 @@ enum LIBEVTX_EVENT_LEVELS
 	LIBEVTX_EVENT_LEVEL_VERBOSE				= 5,
 };
 
-#endif /* !defined( HAVE_LOCAL_LIBEVTX ) */
-
-/* The file flags definitions
+/* The event file flags
  */
 enum LIBEVTX_FILE_FLAGS
 {
+	LIBEVTX_FILE_FLAG_IS_DIRTY				= 0x00000001UL,
+	LIBEVTX_FILE_FLAG_IS_FULL				= 0x00000002UL,
+};
+
+#endif /* !defined( HAVE_LOCAL_LIBEVTX ) */
+
+/* The IO handle flags
+ */
+enum LIBEVTX_IO_HANDLE_FLAGS
+{
 	/* The file is corrupted
 	 */
-	LIBEVTX_FILE_FLAG_CORRUPTED				= 0x01,
+	LIBEVTX_IO_HANDLE_FLAG_IS_CORRUPTED			= 0x01,
 };
+
 
 /* The binary XML token definitions
  */
